# claude_llm_input

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  SPEC.md  config.yaml  deploy.sh  main.py  pyproject.toml  qa.py  settings.py
.claude/commands/: deploy.md
agent/: collect_agent.py  qa_agent.py
chains/: blog_chain.py  filter_chain.py  github_chain.py  reporter_chain.py  summarizer_chain.py  twitter_chain.py
chains/prompts/: filter.prompt  reporter_system.prompt  summarize.prompt
models/: article.py  report.py
scripts/: com.ai-tips.sync.plist  sync_ai_tips.sh
service/: gmail_sender.py  obsidian_writer.py
tasks/: todo.md
tests/: conftest.py  test_blog_chain.py  test_collect_agent.py  test_filter_chain.py  test_github_chain.py  test_gmail_sender.py  test_main.py  test_obsidian_writer.py  test_qa_agent.py  test_reporter_chain.py  test_summarizer_chain.py  test_twitter_chain.py
