[project]
name = "ai-tips-collector"
version = "0.1.0"
description = "生成AI活用・AIコーディングに関する最新情報を毎朝自動収集するエージェント"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "tenacity>=8.0.0",
    "pyyaml>=6.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "markdown>=3.5.0",
    "google-cloud-secret-manager>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
